// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PromotionalArea component renders correctly with mobile check false for tablet 1`] = `
<div
  className="promotional-area"
>
  <div
    className="header-topnav__promo-area--tablet"
    tabIndex="0"
  >
    <Styled(ErrorBoundary)
      carouselConfig={
        Object {
          "arrow": "small",
          "type": "dark",
        }
      }
      options={
        Object {
          "arrows": false,
          "autoplay": true,
          "autoplaySpeed": 3000,
          "fade": true,
          "infinite": true,
          "responsive": Array [
            Object {
              "breakpoint": NaN,
              "settings": Object {
                "arrows": false,
              },
            },
          ],
          "slidesToScroll": 1,
          "slidesToShow": 1,
          "speed": 500,
        }
      }
    >
      <Styled(Anchor)
        target="_blank"
        to="/static/promo"
      >
        <Styled(RichText)
          className="header-topnav__promo-area-content"
          dataLocator="global_promoareaimg"
          richTextHtml="<span><b>FREE SHIPPING EVERY DAY!</b> No minimum purchase required 1.</span>"
        />
      </Styled(Anchor)>
      <Styled(Anchor)
        target="_blank"
        to="/static/promo2"
      >
        <Styled(RichText)
          className="header-topnav__promo-area-content"
          dataLocator="global_promoareaimg"
          richTextHtml="<span><b>FREE SHIPPING EVERY DAY!</b> No minimum purchase required 2.</span>"
        />
      </Styled(Anchor)>
      <Styled(Anchor)
        target="_blank"
        to="/static/promo3"
      >
        <Styled(RichText)
          className="header-topnav__promo-area-content"
          dataLocator="global_promoareaimg"
          richTextHtml="<span><b>FREE SHIPPING EVERY DAY!</b> No minimum purchase required 3.</span>"
        />
      </Styled(Anchor)>
    </Styled(ErrorBoundary)>
  </div>
</div>
`;

exports[`PromotionalArea component renders correctly with mobile check true 1`] = `
<div
  className="promotional-area"
>
  <div
    className="header-topnav__promo-area--mobile"
    tabIndex="0"
  >
    <Styled(ErrorBoundary)
      carouselConfig={
        Object {
          "arrow": "small",
          "type": "dark",
        }
      }
      options={
        Object {
          "autoplaySpeed": 6000,
          "speed": 500,
        }
      }
    >
      <Styled(Anchor)
        target="_blank"
        to="/static/promo"
      >
        <Styled(RichText)
          className="header-topnav__promo-area-content"
          dataLocator="global_promoareaimg"
          richTextHtml="<span><b>FREE SHIPPING EVERY DAY!</b> No minimum purchase required 1.</span>"
        />
      </Styled(Anchor)>
      <Styled(Anchor)
        target="_blank"
        to="/static/promo2"
      >
        <Styled(RichText)
          className="header-topnav__promo-area-content"
          dataLocator="global_promoareaimg"
          richTextHtml="<span><b>FREE SHIPPING EVERY DAY!</b> No minimum purchase required 2.</span>"
        />
      </Styled(Anchor)>
      <Styled(Anchor)
        target="_blank"
        to="/static/promo3"
      >
        <Styled(RichText)
          className="header-topnav__promo-area-content"
          dataLocator="global_promoareaimg"
          richTextHtml="<span><b>FREE SHIPPING EVERY DAY!</b> No minimum purchase required 3.</span>"
        />
      </Styled(Anchor)>
    </Styled(ErrorBoundary)>
  </div>
</div>
`;
